--- a/terms.html
+++ b/terms.html
@@ -66,16 +66,21 @@
                     <th scope="row">2. Your data</th>
                     <td>
                         a. What data do we save?<br>
-                        We save data for the settings and nothing else.<br>
+                        We save data for your guild specific settings and some statistics.<br>
                         By using our products you agree for us to save the following data from your discord guild:<br>
                         - The ID of your guild<br>
                         - IDs of blacklisted channels<br>
                         - ID of a possible dj role setup<br>
                         - and the current state for permissions and startPlaying options.<br>
+                        And the following usage statistics:<br>
+                        - Played songs<br>
+                        - Command usage with the users id<br>
+                        - Last time an user used a command with the users id<br>
+                        - Overall listening time of users with the users id<br>
                         b. How do we use it?<br>
                         Your data is used by the bot internally to operate the way you want it to.<br>
                         c. How long do we keep it?<br>
-                        Your data is saved for as long as the bot stays on your guild. There cam be exceptions to this however you can contact us if you wish to make sure your data has been deleted.
+                        Your data is saved for as long as the bot stays on your guild. Statistics are saved indefinitely. There cam be exceptions to this however you can contact us if you wish to make sure your data has been deleted.
                     </td>
                 </tr>
                 <tr>
@@ -96,7 +101,7 @@
                 </tr>
             </tbody>
         </table>
-        Effective as of April 1, 2022 and updated on 29th of March 2022
+        Effective as of April 1, 2022 and updated on 15th of January 2024
     </div>
     <link rel="stylesheet" href="./public/footer.css">
 <footer>
