--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -61,13 +61,18 @@
                         - IDs of blacklisted channels<br>
                         - ID of a possible dj role setup<br>
                         - and the current state for permissions and startPlaying options.<br>
+                        And the following usage statistics:<br>
+                        - Played songs<br>
+                        - Command usage with the users id<br>
+                        - Last time an user used a command with the users id<br>
+                        - Overall listening time of users with the users id<br>
                     </td>
                 </tr>
                 <tr>
                     <th scope="row">2. Location of your data</th>
                     <td>
-                        We have servers in the U.s and Europe (Germany and Finland)<br>
-                        By using our products you agree for the aforementioned data to be stored in these locations
+                        We have servers only in Finland<br>
+                        By using our products you agree for the aforementioned data to be stored in the aforementioned location.
                     </td>
                 </tr>
                 <tr>
@@ -78,7 +83,7 @@
                 </tr>
             </tbody>
         </table>
-        Effective as of April 1, 2022 and updated on 29th of March 2022
+        Effective as of April 1, 2022 and updated on 15th of January 2024
     </div>
     <link rel="stylesheet" href="./public/footer.css">
 <footer>
