fix discord footer link

--- a/terms.html
+++ b/terms.html
@@ -107,7 +107,7 @@
 <footer>
     <div class="footerItem">
         <div class="footerDiscordLogo">
-            <a href="https:/https://discord.gg/rvHuJt.gg/rvHuJtB" target="_blank"></a>
+            <a href="https://discord.gg/rvHuJtB" target="_blank"></a>
         </div>
     </div>
     <div class="footerItem">
