--- a/releases.html
+++ b/releases.html
@@ -108,10 +108,7 @@
     <footer>
       <div class="footerItem">
         <div class="footerDiscordLogo">
-          <a
-            href="https:/https://discord.gg/rvHuJt.gg/rvHuJtB"
-            target="_blank"
-          ></a>
+          <a href="https://discord.gg/rvHuJtB" target="_blank"></a>
         </div>
       </div>
       <div class="footerItem">
