--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           quality possible.
         </div>
         <div class="item">
-          <img src="./public/img/images/sound.png" /><br />We have a different
+          <img src="./public/img/images/sound.png" /><br />We have multiple
           audio modifiers that you can use free of charge.
         </div>
       </div>
