--- a/terms.html
+++ b/terms.html
@@ -115,7 +115,7 @@
         </div>
     </div>
     <div class="footerItem">
-        <br><br>Cwchristerw<br>Developer<br>Discord: cwchristerw
+        <br><br>cwchristerw<br>Developer<br>Discord: cwchristerw
         <div class="footerGithubLogo">
             <a href="https://github.com/cwchristerw" target="_blank"></a>
         </div>
