Fix typo in TOS

--- a/terms.html
+++ b/terms.html
@@ -79,7 +79,7 @@
                         b. How do we use it?<br>
                         Your data is used by the bot internally to operate the way you want it to.<br>
                         c. How long do we keep it?<br>
-                        Your data is saved for as long as the bot stays on your guild. Statistics are saved indefinitely. There cam be exceptions to this however you can contact us if you wish to make sure your data has been deleted.
+                        Your data is saved for as long as the bot stays on your guild. Statistics are saved indefinitely. There can be exceptions to this however you can contact us if you wish to make sure your data has been deleted.
                     </td>
                 </tr>
                 <tr>
